# exifool

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  installation.html  license.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini  usage.html
.github/workflows/: ci.yml  docs.yml
docs/: index.md  installation.md  license.md  usage.md
exifool/: cli.py  errors.py  extractor.py  pdf.py  utility.py
search/: search_index.json
tests/: test_cli.py
